--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Ivan Volodin",
   "license": "ISC",
   "devDependencies": {
+    "@fancyapps/fancybox": "^3.5.7",
     "browser-sync": "^2.27.11",
     "del": "^6.1.1",
     "gulp": "^4.0.2",
